refactor: refactor logic inventory
